parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     PROGRAM -> DEV_SEC CMD_SEC
Rule 2     DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS
Rule 3     DEV_LIST -> DEV_ITEM
Rule 4     DEV_LIST -> DEV_LIST DEV_ITEM
Rule 5     DEV_ITEM -> ID_DEV
Rule 6     DEV_ITEM -> ID_DEV LSQB ID_OBS RSQB
Rule 7     CMD_SEC -> <empty>
Rule 8     CMD_SEC -> CMD_LIST
Rule 9     CMD_LIST -> CMD PONTOV
Rule 10    CMD_LIST -> CMD_LIST CMD PONTOV
Rule 11    CMD -> DEF ID_OBS EQ VAL
Rule 12    CMD -> ACT
Rule 13    CMD -> QUANDO OBS DP ACT
Rule 14    CMD -> QUANDO OBS DP ACT SENAO ACT
Rule 15    OBS -> SIMPLE_OBS
Rule 16    OBS -> SIMPLE_OBS AND OBS
Rule 17    SIMPLE_OBS -> ID_OBS OP_LOGIC VAL
Rule 18    VAL -> NUM
Rule 19    VAL -> BOOL
Rule 20    ACT -> EXECUTE ACTION EM ID_DEV
Rule 21    ACT -> ALERTA PARA ID_DEV DP MSG
Rule 22    ACT -> ALERTA PARA ID_DEV DP MSG VIRG ID_OBS
Rule 23    ACT -> DIFUNDIR DP MSG SETAB LSB_DEVLIST
Rule 24    ACT -> DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST
Rule 25    LSB_DEVLIST -> LSQB DEV_LIST_N RSQB
Rule 26    DEV_LIST_N -> ID_DEV
Rule 27    DEV_LIST_N -> DEV_LIST_N VIRG ID_DEV
Rule 28    ACTION -> LIGAR
Rule 29    ACTION -> DESLIGAR

Terminals, with rules where they appear

ALERTA               : 21 22
AND                  : 16
BOOL                 : 19
DEF                  : 11
DESLIGAR             : 29
DIFUNDIR             : 23 24
DISPOSITIVOS         : 2
DP                   : 2 13 14 21 22 23 24
EM                   : 20
EQ                   : 11
EXECUTE              : 20
FIMDISPOSITIVOS      : 2
ID_DEV               : 5 6 20 21 22 26 27
ID_OBS               : 6 11 17 22 24
LIGAR                : 28
LSQB                 : 6 25
MSG                  : 21 22 23 24
NUM                  : 18
OP_LOGIC             : 17
PARA                 : 21 22
PONTOV               : 9 10
QUANDO               : 13 14
RSQB                 : 6 25
SENAO                : 14
SETAB                : 23 24
VIRG                 : 22 27
error                : 

Nonterminals, with rules where they appear

ACT                  : 12 13 14 14
ACTION               : 20
CMD                  : 9 10
CMD_LIST             : 8 10
CMD_SEC              : 1
DEV_ITEM             : 3 4
DEV_LIST             : 2 4
DEV_LIST_N           : 25 27
DEV_SEC              : 1
LSB_DEVLIST          : 23 24
OBS                  : 13 14 16
PROGRAM              : 0
SIMPLE_OBS           : 15 16
VAL                  : 11 17

Parsing method: LALR

state 0

    (0) S' -> . PROGRAM
    (1) PROGRAM -> . DEV_SEC CMD_SEC
    (2) DEV_SEC -> . DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS

    DISPOSITIVOS    shift and go to state 3

    PROGRAM                        shift and go to state 1
    DEV_SEC                        shift and go to state 2

state 1

    (0) S' -> PROGRAM .



state 2

    (1) PROGRAM -> DEV_SEC . CMD_SEC
    (7) CMD_SEC -> .
    (8) CMD_SEC -> . CMD_LIST
    (9) CMD_LIST -> . CMD PONTOV
    (10) CMD_LIST -> . CMD_LIST CMD PONTOV
    (11) CMD -> . DEF ID_OBS EQ VAL
    (12) CMD -> . ACT
    (13) CMD -> . QUANDO OBS DP ACT
    (14) CMD -> . QUANDO OBS DP ACT SENAO ACT
    (20) ACT -> . EXECUTE ACTION EM ID_DEV
    (21) ACT -> . ALERTA PARA ID_DEV DP MSG
    (22) ACT -> . ALERTA PARA ID_DEV DP MSG VIRG ID_OBS
    (23) ACT -> . DIFUNDIR DP MSG SETAB LSB_DEVLIST
    (24) ACT -> . DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST

    $end            reduce using rule 7 (CMD_SEC -> .)
    DEF             shift and go to state 7
    QUANDO          shift and go to state 9
    EXECUTE         shift and go to state 10
    ALERTA          shift and go to state 11
    DIFUNDIR        shift and go to state 12

    CMD_SEC                        shift and go to state 4
    CMD_LIST                       shift and go to state 5
    CMD                            shift and go to state 6
    ACT                            shift and go to state 8

state 3

    (2) DEV_SEC -> DISPOSITIVOS . DP DEV_LIST FIMDISPOSITIVOS

    DP              shift and go to state 13


state 4

    (1) PROGRAM -> DEV_SEC CMD_SEC .

    $end            reduce using rule 1 (PROGRAM -> DEV_SEC CMD_SEC .)


state 5

    (8) CMD_SEC -> CMD_LIST .
    (10) CMD_LIST -> CMD_LIST . CMD PONTOV
    (11) CMD -> . DEF ID_OBS EQ VAL
    (12) CMD -> . ACT
    (13) CMD -> . QUANDO OBS DP ACT
    (14) CMD -> . QUANDO OBS DP ACT SENAO ACT
    (20) ACT -> . EXECUTE ACTION EM ID_DEV
    (21) ACT -> . ALERTA PARA ID_DEV DP MSG
    (22) ACT -> . ALERTA PARA ID_DEV DP MSG VIRG ID_OBS
    (23) ACT -> . DIFUNDIR DP MSG SETAB LSB_DEVLIST
    (24) ACT -> . DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST

    $end            reduce using rule 8 (CMD_SEC -> CMD_LIST .)
    DEF             shift and go to state 7
    QUANDO          shift and go to state 9
    EXECUTE         shift and go to state 10
    ALERTA          shift and go to state 11
    DIFUNDIR        shift and go to state 12

    CMD                            shift and go to state 14
    ACT                            shift and go to state 8

state 6

    (9) CMD_LIST -> CMD . PONTOV

    PONTOV          shift and go to state 15


state 7

    (11) CMD -> DEF . ID_OBS EQ VAL

    ID_OBS          shift and go to state 16


state 8

    (12) CMD -> ACT .

    PONTOV          reduce using rule 12 (CMD -> ACT .)


state 9

    (13) CMD -> QUANDO . OBS DP ACT
    (14) CMD -> QUANDO . OBS DP ACT SENAO ACT
    (15) OBS -> . SIMPLE_OBS
    (16) OBS -> . SIMPLE_OBS AND OBS
    (17) SIMPLE_OBS -> . ID_OBS OP_LOGIC VAL

    ID_OBS          shift and go to state 19

    OBS                            shift and go to state 17
    SIMPLE_OBS                     shift and go to state 18

state 10

    (20) ACT -> EXECUTE . ACTION EM ID_DEV
    (28) ACTION -> . LIGAR
    (29) ACTION -> . DESLIGAR

    LIGAR           shift and go to state 21
    DESLIGAR        shift and go to state 22

    ACTION                         shift and go to state 20

state 11

    (21) ACT -> ALERTA . PARA ID_DEV DP MSG
    (22) ACT -> ALERTA . PARA ID_DEV DP MSG VIRG ID_OBS

    PARA            shift and go to state 23


state 12

    (23) ACT -> DIFUNDIR . DP MSG SETAB LSB_DEVLIST
    (24) ACT -> DIFUNDIR . DP MSG ID_OBS SETAB LSB_DEVLIST

    DP              shift and go to state 24


state 13

    (2) DEV_SEC -> DISPOSITIVOS DP . DEV_LIST FIMDISPOSITIVOS
    (3) DEV_LIST -> . DEV_ITEM
    (4) DEV_LIST -> . DEV_LIST DEV_ITEM
    (5) DEV_ITEM -> . ID_DEV
    (6) DEV_ITEM -> . ID_DEV LSQB ID_OBS RSQB

    ID_DEV          shift and go to state 27

    DEV_LIST                       shift and go to state 25
    DEV_ITEM                       shift and go to state 26

state 14

    (10) CMD_LIST -> CMD_LIST CMD . PONTOV

    PONTOV          shift and go to state 28


state 15

    (9) CMD_LIST -> CMD PONTOV .

    DEF             reduce using rule 9 (CMD_LIST -> CMD PONTOV .)
    QUANDO          reduce using rule 9 (CMD_LIST -> CMD PONTOV .)
    EXECUTE         reduce using rule 9 (CMD_LIST -> CMD PONTOV .)
    ALERTA          reduce using rule 9 (CMD_LIST -> CMD PONTOV .)
    DIFUNDIR        reduce using rule 9 (CMD_LIST -> CMD PONTOV .)
    $end            reduce using rule 9 (CMD_LIST -> CMD PONTOV .)


state 16

    (11) CMD -> DEF ID_OBS . EQ VAL

    EQ              shift and go to state 29


state 17

    (13) CMD -> QUANDO OBS . DP ACT
    (14) CMD -> QUANDO OBS . DP ACT SENAO ACT

    DP              shift and go to state 30


state 18

    (15) OBS -> SIMPLE_OBS .
    (16) OBS -> SIMPLE_OBS . AND OBS

    DP              reduce using rule 15 (OBS -> SIMPLE_OBS .)
    AND             shift and go to state 31


state 19

    (17) SIMPLE_OBS -> ID_OBS . OP_LOGIC VAL

    OP_LOGIC        shift and go to state 32


state 20

    (20) ACT -> EXECUTE ACTION . EM ID_DEV

    EM              shift and go to state 33


state 21

    (28) ACTION -> LIGAR .

    EM              reduce using rule 28 (ACTION -> LIGAR .)


state 22

    (29) ACTION -> DESLIGAR .

    EM              reduce using rule 29 (ACTION -> DESLIGAR .)


state 23

    (21) ACT -> ALERTA PARA . ID_DEV DP MSG
    (22) ACT -> ALERTA PARA . ID_DEV DP MSG VIRG ID_OBS

    ID_DEV          shift and go to state 34


state 24

    (23) ACT -> DIFUNDIR DP . MSG SETAB LSB_DEVLIST
    (24) ACT -> DIFUNDIR DP . MSG ID_OBS SETAB LSB_DEVLIST

    MSG             shift and go to state 35


state 25

    (2) DEV_SEC -> DISPOSITIVOS DP DEV_LIST . FIMDISPOSITIVOS
    (4) DEV_LIST -> DEV_LIST . DEV_ITEM
    (5) DEV_ITEM -> . ID_DEV
    (6) DEV_ITEM -> . ID_DEV LSQB ID_OBS RSQB

    FIMDISPOSITIVOS shift and go to state 36
    ID_DEV          shift and go to state 27

    DEV_ITEM                       shift and go to state 37

state 26

    (3) DEV_LIST -> DEV_ITEM .

    FIMDISPOSITIVOS reduce using rule 3 (DEV_LIST -> DEV_ITEM .)
    ID_DEV          reduce using rule 3 (DEV_LIST -> DEV_ITEM .)


state 27

    (5) DEV_ITEM -> ID_DEV .
    (6) DEV_ITEM -> ID_DEV . LSQB ID_OBS RSQB

    FIMDISPOSITIVOS reduce using rule 5 (DEV_ITEM -> ID_DEV .)
    ID_DEV          reduce using rule 5 (DEV_ITEM -> ID_DEV .)
    LSQB            shift and go to state 38


state 28

    (10) CMD_LIST -> CMD_LIST CMD PONTOV .

    DEF             reduce using rule 10 (CMD_LIST -> CMD_LIST CMD PONTOV .)
    QUANDO          reduce using rule 10 (CMD_LIST -> CMD_LIST CMD PONTOV .)
    EXECUTE         reduce using rule 10 (CMD_LIST -> CMD_LIST CMD PONTOV .)
    ALERTA          reduce using rule 10 (CMD_LIST -> CMD_LIST CMD PONTOV .)
    DIFUNDIR        reduce using rule 10 (CMD_LIST -> CMD_LIST CMD PONTOV .)
    $end            reduce using rule 10 (CMD_LIST -> CMD_LIST CMD PONTOV .)


state 29

    (11) CMD -> DEF ID_OBS EQ . VAL
    (18) VAL -> . NUM
    (19) VAL -> . BOOL

    NUM             shift and go to state 40
    BOOL            shift and go to state 41

    VAL                            shift and go to state 39

state 30

    (13) CMD -> QUANDO OBS DP . ACT
    (14) CMD -> QUANDO OBS DP . ACT SENAO ACT
    (20) ACT -> . EXECUTE ACTION EM ID_DEV
    (21) ACT -> . ALERTA PARA ID_DEV DP MSG
    (22) ACT -> . ALERTA PARA ID_DEV DP MSG VIRG ID_OBS
    (23) ACT -> . DIFUNDIR DP MSG SETAB LSB_DEVLIST
    (24) ACT -> . DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST

    EXECUTE         shift and go to state 10
    ALERTA          shift and go to state 11
    DIFUNDIR        shift and go to state 12

    ACT                            shift and go to state 42

state 31

    (16) OBS -> SIMPLE_OBS AND . OBS
    (15) OBS -> . SIMPLE_OBS
    (16) OBS -> . SIMPLE_OBS AND OBS
    (17) SIMPLE_OBS -> . ID_OBS OP_LOGIC VAL

    ID_OBS          shift and go to state 19

    SIMPLE_OBS                     shift and go to state 18
    OBS                            shift and go to state 43

state 32

    (17) SIMPLE_OBS -> ID_OBS OP_LOGIC . VAL
    (18) VAL -> . NUM
    (19) VAL -> . BOOL

    NUM             shift and go to state 40
    BOOL            shift and go to state 41

    VAL                            shift and go to state 44

state 33

    (20) ACT -> EXECUTE ACTION EM . ID_DEV

    ID_DEV          shift and go to state 45


state 34

    (21) ACT -> ALERTA PARA ID_DEV . DP MSG
    (22) ACT -> ALERTA PARA ID_DEV . DP MSG VIRG ID_OBS

    DP              shift and go to state 46


state 35

    (23) ACT -> DIFUNDIR DP MSG . SETAB LSB_DEVLIST
    (24) ACT -> DIFUNDIR DP MSG . ID_OBS SETAB LSB_DEVLIST

    SETAB           shift and go to state 47
    ID_OBS          shift and go to state 48


state 36

    (2) DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS .

    DEF             reduce using rule 2 (DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS .)
    QUANDO          reduce using rule 2 (DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS .)
    EXECUTE         reduce using rule 2 (DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS .)
    ALERTA          reduce using rule 2 (DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS .)
    DIFUNDIR        reduce using rule 2 (DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS .)
    $end            reduce using rule 2 (DEV_SEC -> DISPOSITIVOS DP DEV_LIST FIMDISPOSITIVOS .)


state 37

    (4) DEV_LIST -> DEV_LIST DEV_ITEM .

    FIMDISPOSITIVOS reduce using rule 4 (DEV_LIST -> DEV_LIST DEV_ITEM .)
    ID_DEV          reduce using rule 4 (DEV_LIST -> DEV_LIST DEV_ITEM .)


state 38

    (6) DEV_ITEM -> ID_DEV LSQB . ID_OBS RSQB

    ID_OBS          shift and go to state 49


state 39

    (11) CMD -> DEF ID_OBS EQ VAL .

    PONTOV          reduce using rule 11 (CMD -> DEF ID_OBS EQ VAL .)


state 40

    (18) VAL -> NUM .

    PONTOV          reduce using rule 18 (VAL -> NUM .)
    AND             reduce using rule 18 (VAL -> NUM .)
    DP              reduce using rule 18 (VAL -> NUM .)


state 41

    (19) VAL -> BOOL .

    PONTOV          reduce using rule 19 (VAL -> BOOL .)
    AND             reduce using rule 19 (VAL -> BOOL .)
    DP              reduce using rule 19 (VAL -> BOOL .)


state 42

    (13) CMD -> QUANDO OBS DP ACT .
    (14) CMD -> QUANDO OBS DP ACT . SENAO ACT

    PONTOV          reduce using rule 13 (CMD -> QUANDO OBS DP ACT .)
    SENAO           shift and go to state 50


state 43

    (16) OBS -> SIMPLE_OBS AND OBS .

    DP              reduce using rule 16 (OBS -> SIMPLE_OBS AND OBS .)


state 44

    (17) SIMPLE_OBS -> ID_OBS OP_LOGIC VAL .

    AND             reduce using rule 17 (SIMPLE_OBS -> ID_OBS OP_LOGIC VAL .)
    DP              reduce using rule 17 (SIMPLE_OBS -> ID_OBS OP_LOGIC VAL .)


state 45

    (20) ACT -> EXECUTE ACTION EM ID_DEV .

    PONTOV          reduce using rule 20 (ACT -> EXECUTE ACTION EM ID_DEV .)
    SENAO           reduce using rule 20 (ACT -> EXECUTE ACTION EM ID_DEV .)


state 46

    (21) ACT -> ALERTA PARA ID_DEV DP . MSG
    (22) ACT -> ALERTA PARA ID_DEV DP . MSG VIRG ID_OBS

    MSG             shift and go to state 51


state 47

    (23) ACT -> DIFUNDIR DP MSG SETAB . LSB_DEVLIST
    (25) LSB_DEVLIST -> . LSQB DEV_LIST_N RSQB

    LSQB            shift and go to state 53

    LSB_DEVLIST                    shift and go to state 52

state 48

    (24) ACT -> DIFUNDIR DP MSG ID_OBS . SETAB LSB_DEVLIST

    SETAB           shift and go to state 54


state 49

    (6) DEV_ITEM -> ID_DEV LSQB ID_OBS . RSQB

    RSQB            shift and go to state 55


state 50

    (14) CMD -> QUANDO OBS DP ACT SENAO . ACT
    (20) ACT -> . EXECUTE ACTION EM ID_DEV
    (21) ACT -> . ALERTA PARA ID_DEV DP MSG
    (22) ACT -> . ALERTA PARA ID_DEV DP MSG VIRG ID_OBS
    (23) ACT -> . DIFUNDIR DP MSG SETAB LSB_DEVLIST
    (24) ACT -> . DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST

    EXECUTE         shift and go to state 10
    ALERTA          shift and go to state 11
    DIFUNDIR        shift and go to state 12

    ACT                            shift and go to state 56

state 51

    (21) ACT -> ALERTA PARA ID_DEV DP MSG .
    (22) ACT -> ALERTA PARA ID_DEV DP MSG . VIRG ID_OBS

    PONTOV          reduce using rule 21 (ACT -> ALERTA PARA ID_DEV DP MSG .)
    SENAO           reduce using rule 21 (ACT -> ALERTA PARA ID_DEV DP MSG .)
    VIRG            shift and go to state 57


state 52

    (23) ACT -> DIFUNDIR DP MSG SETAB LSB_DEVLIST .

    PONTOV          reduce using rule 23 (ACT -> DIFUNDIR DP MSG SETAB LSB_DEVLIST .)
    SENAO           reduce using rule 23 (ACT -> DIFUNDIR DP MSG SETAB LSB_DEVLIST .)


state 53

    (25) LSB_DEVLIST -> LSQB . DEV_LIST_N RSQB
    (26) DEV_LIST_N -> . ID_DEV
    (27) DEV_LIST_N -> . DEV_LIST_N VIRG ID_DEV

    ID_DEV          shift and go to state 59

    DEV_LIST_N                     shift and go to state 58

state 54

    (24) ACT -> DIFUNDIR DP MSG ID_OBS SETAB . LSB_DEVLIST
    (25) LSB_DEVLIST -> . LSQB DEV_LIST_N RSQB

    LSQB            shift and go to state 53

    LSB_DEVLIST                    shift and go to state 60

state 55

    (6) DEV_ITEM -> ID_DEV LSQB ID_OBS RSQB .

    FIMDISPOSITIVOS reduce using rule 6 (DEV_ITEM -> ID_DEV LSQB ID_OBS RSQB .)
    ID_DEV          reduce using rule 6 (DEV_ITEM -> ID_DEV LSQB ID_OBS RSQB .)


state 56

    (14) CMD -> QUANDO OBS DP ACT SENAO ACT .

    PONTOV          reduce using rule 14 (CMD -> QUANDO OBS DP ACT SENAO ACT .)


state 57

    (22) ACT -> ALERTA PARA ID_DEV DP MSG VIRG . ID_OBS

    ID_OBS          shift and go to state 61


state 58

    (25) LSB_DEVLIST -> LSQB DEV_LIST_N . RSQB
    (27) DEV_LIST_N -> DEV_LIST_N . VIRG ID_DEV

    RSQB            shift and go to state 62
    VIRG            shift and go to state 63


state 59

    (26) DEV_LIST_N -> ID_DEV .

    RSQB            reduce using rule 26 (DEV_LIST_N -> ID_DEV .)
    VIRG            reduce using rule 26 (DEV_LIST_N -> ID_DEV .)


state 60

    (24) ACT -> DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST .

    PONTOV          reduce using rule 24 (ACT -> DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST .)
    SENAO           reduce using rule 24 (ACT -> DIFUNDIR DP MSG ID_OBS SETAB LSB_DEVLIST .)


state 61

    (22) ACT -> ALERTA PARA ID_DEV DP MSG VIRG ID_OBS .

    PONTOV          reduce using rule 22 (ACT -> ALERTA PARA ID_DEV DP MSG VIRG ID_OBS .)
    SENAO           reduce using rule 22 (ACT -> ALERTA PARA ID_DEV DP MSG VIRG ID_OBS .)


state 62

    (25) LSB_DEVLIST -> LSQB DEV_LIST_N RSQB .

    PONTOV          reduce using rule 25 (LSB_DEVLIST -> LSQB DEV_LIST_N RSQB .)
    SENAO           reduce using rule 25 (LSB_DEVLIST -> LSQB DEV_LIST_N RSQB .)


state 63

    (27) DEV_LIST_N -> DEV_LIST_N VIRG . ID_DEV

    ID_DEV          shift and go to state 64


state 64

    (27) DEV_LIST_N -> DEV_LIST_N VIRG ID_DEV .

    RSQB            reduce using rule 27 (DEV_LIST_N -> DEV_LIST_N VIRG ID_DEV .)
    VIRG            reduce using rule 27 (DEV_LIST_N -> DEV_LIST_N VIRG ID_DEV .)

